update swaggers and make schedule and commends for cleaning up the otps
